<?xml version="1.0"?>
<package>
  <name>seekthermal_ros</name>
  <version>0.0.0</version>
  <description>The seekthermal_ros package</description>

  <maintainer email="dominic.jud@mavt.ethz.ch">Dominic Jud</maintainer>

  <license>BSD</license>
  
  <author email="dominic.jud@mavt.ethz.ch">Dominic Jud</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend> 
  
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
